style: changes to  rating text, fixed alignment

--- a/client/src/pages/SinglePost/Rating/Rating.css
+++ b/client/src/pages/SinglePost/Rating/Rating.css
@@ -8,3 +8,8 @@
 .rating-icon {
   cursor: pointer;
 }
+
+.rating-text {
+  text-align: center;
+  width: 2rem;
+}
